force-app/main/default/objects/Competitor__c/fields/AdditionalProductInformation__c.field-meta.xml
<CustomField>
    <fullName>AdditionalProductInformation__c</fullName>
    <label>Additional product information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>