force-app/main/default/objects/Competitor__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <label>Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tchibo Coffee Service</fullName>
            </value>
            <value>
                <fullName>Jacobs / JDE Professional</fullName>
            </value>
            <value>
                <fullName>Dallmayr Professional / Vending &amp; Office</fullName>
            </value>
            <value>
                <fullName>Lavazza</fullName>
            </value>
            <value>
                <fullName>Kaffee Partner</fullName>
            </value>
            <value>
                <fullName>Amazon</fullName>
            </value>
            <value>
                <fullName>Chaqwa (Coca-Cola)</fullName>
            </value>
            <value>
                <fullName>Dinzler</fullName>
            </value>
            <value>
                <fullName>GOURVITA</fullName>
            </value>
            <value>
                <fullName>Heimbs / Azul / Dallmayr</fullName>
            </value>
            <value>
                <fullName>Illy Kaffee</fullName>
            </value>
            <value>
                <fullName>IOCS / Darboven</fullName>
            </value>
            <value>
                <fullName>Jacobs Douwe Egberts</fullName>
            </value>
            <value>
                <fullName>Julius Meinl</fullName>
            </value>
            <value>
                <fullName>LEH</fullName>
            </value>
            <value>
                <fullName>LOGO</fullName>
            </value>
            <value>
                <fullName>Melitta</fullName>
            </value>
            <value>
                <fullName>Metro</fullName>
            </value>
            <value>
                <fullName>Nespresso</fullName>
            </value>
            <value>
                <fullName>Regionaler Röster</fullName>
            </value>
            <value>
                <fullName>Schirmer</fullName>
            </value>
            <value>
                <fullName>Seeberger</fullName>
            </value>
            <value>
                <fullName>Segafredo</fullName>
            </value>
            <value>
                <fullName>Westhoff</fullName>
            </value>
            <value>
                <fullName>Sonstige</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>