force-app/main/default/objects/Competitor__c/fields/ContractExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>ContractExpiryDate__c</fullName>
    <label>Contract Expiry Date</label>
    <type>Date</type>
</CustomField>