force-app/main/default/objects/Competitor__c/fields/CurrentCoffeeMachine__c.field-meta.xml
<CustomField>
    <fullName>CurrentCoffeeMachine__c</fullName>
    <label>CurrentCoffeeMachine</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Astoria</fullName>
            </value>
            <value>
                <fullName>Bonamat</fullName>
            </value>
            <value>
                <fullName>Coffema</fullName>
            </value>
            <value>
                <fullName>Della Corte</fullName>
            </value>
            <value>
                <fullName>Eversys</fullName>
            </value>
            <value>
                <fullName>Faema</fullName>
            </value>
            <value>
                <fullName>Franke</fullName>
            </value>
            <value>
                <fullName>Jura</fullName>
            </value>
            <value>
                <fullName>La Chimbali</fullName>
            </value>
            <value>
                <fullName>La San Marco</fullName>
            </value>
            <value>
                <fullName>Melitta</fullName>
            </value>
            <value>
                <fullName>N &amp; W</fullName>
            </value>
            <value>
                <fullName>Nuova Simonelli</fullName>
            </value>
            <value>
                <fullName>Rex Royal</fullName>
            </value>
            <value>
                <fullName>Schaerer</fullName>
            </value>
            <value>
                <fullName>Servomat Steigler</fullName>
            </value>
            <value>
                <fullName>Sielaff</fullName>
            </value>
            <value>
                <fullName>Sonstige</fullName>
            </value>
            <value>
                <fullName>Thermoplan</fullName>
            </value>
            <value>
                <fullName>Wittenburg</fullName>
            </value>
            <value>
                <fullName>WMF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>