force-app/main/default/objects/Competitor__c/fields/CurrentTeaSupplier__c.field-meta.xml
<CustomField>
    <fullName>CurrentTeaSupplier__c</fullName>
    <label>CurrentTeaSupplier</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Althaus</fullName>
            </value>
            <value>
                <fullName>Amazon</fullName>
            </value>
            <value>
                <fullName>GOURVITA</fullName>
            </value>
            <value>
                <fullName>Heimbs / Azul / Dallmayr</fullName>
            </value>
            <value>
                <fullName>Jacobs Douwe Egberts</fullName>
            </value>
            <value>
                <fullName>justt</fullName>
            </value>
            <value>
                <fullName>LEH</fullName>
            </value>
            <value>
                <fullName>Lipton</fullName>
            </value>
            <value>
                <fullName>Meßmer</fullName>
            </value>
            <value>
                <fullName>Milford</fullName>
            </value>
            <value>
                <fullName>Pure (Tchibo)</fullName>
            </value>
            <value>
                <fullName>Ronnefeldt</fullName>
            </value>
            <value>
                <fullName>Sonstige</fullName>
            </value>
            <value>
                <fullName>Teegeschwender</fullName>
            </value>
            <value>
                <fullName>Teekanne</fullName>
            </value>
            <value>
                <fullName>Twinings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>