force-app/main/default/objects/Competitor__c/fields/ProductGroup__c.field-meta.xml
<CustomField>
    <fullName>ProductGroup__c</fullName>
    <label>Product Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Coffee</fullName>
            </value>
            <value>
                <fullName>Tea</fullName>
            </value>
            <value>
                <fullName>Hot Chocolate</fullName>
            </value>
            <value>
                <fullName>Engine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>