force-app/main/default/objects/Competitor__c/fields/When_Time_Runs_Out__c.field-meta.xml
<CustomField>
    <fullName>When_Time_Runs_Out__c</fullName>
    <formula>ContractExpiryDate__c - Today()</formula>
    <label>When Time Runs Out</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>